# cindermark

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Package.swift  README.md  SECURITY.md  build-apple.sh  build.rs  uniffi.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: parser_bench.rs
docs/: PERFORMANCE.md
examples/: trace_email.rs  trace_feat.rs
src/: ast.rs  cindermark.udl  incremental.rs  inline.rs  lexer.rs  lib.rs  parser.rs  utf16.rs  wasm.rs
swift/Sources/Cindermark/: CindermarkFFI.swift
tests/: parser_tests.rs
